<resources>
    <string name="app_name">Markeet</string>
    <string name="www_myshop_tn">www.Markeet.tn</string>
    <string name="internal_storage">Internal storage</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="email">Email</string>
    <string name="valider">Valider</string>
    <string name="s_inscrire">S\'inscrire ?</string>
    <string name="login">Login</string>
    <string name="login2">Login ?</string>
    <string name="nom">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="inscription">Inscription</string>
    <string name="adress">Address</string>
    <string name="t_l">Tél</string>
    <string name="acceuil">Acceuil</string>
    <string name="d_connecter">Déconnecter</string>
    <string name="favori">Favorié</string>
    <string name="profil">Profil</string>
    <string name="mes_produit">Mes Produit</string>
    <string name="ajouter_botique">Boutique</string>
    <string name="produits">Produits</string>
    <string name="champs_obligatoir">Champ obligatoire</string>
    <string name="email_invalide">Adresse mail invalide</string>
    <string name="chek_internet">Vous n\'êtes pas connectés à Internet</string>
    <string name="MailNexistePas">Cette adresse mail deja utilisé</string>
    <string name="insert_eronee">Insertion erronée</string>
    <string name="EmailOuMotDePasseInvalide">Email ou mot de passe invalide</string>
    <string name="mes_produits">Mes Produits</string>
    <string name="mes_favoris">Mes Favoris</string>
    <string name="camera">Camera</string>
    <string name="description">Description</string>
    <string name="prix">Prix</string>
    <string name="ajout_produit">Ajout Produit</string>
    <string name="nom_poduit">Nom Poduit</string>
    <string name="gallery">Gallery</string>
    <string name="importer_image">Importer Image</string>
    <string name="chose_img">Choisir au mois une image</string>
    <string name="add_prod_succ">Votre produit a éte ajouté avec succès</string>
    <string name="dt">DT</string>
    <string name="ff">Vous n\'êtes pas connectés à Internet</string>
    <string name="ville">Ville</string>
    <string name="ajout_boutique">Ajout Boutique</string>
    <string name="categorie">Categorie</string>
    <string name="marque">Marque</string>
    <string name="contacter_par">Contacter:</string>
    <string name="chektype_contact">Choisir une type de contact</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="supp_prod">Supprimer Produit</string>
    <string name="question_supp_prod">Vous été sûr de supprimer cette produit ?</string>
    <string name="question_supp_bout">Vous été sûr de supprimer cette produit du boutique ?</string>
    <string name="annonce">Annonce</string>
    <string name="gouvernement">Gouvernement</string>
    <string name="modifier_profile">Modifier Profile</string>
    <string name="deconnecter">Deconnecter</string>
    <string name="modifier">Modifier</string>
    <string name="voir_photo">Voir Photo</string>
    <string name="anuller">Annuler</string>
    <string name="_5">/5</string>
    <string name="produit_existe">Le Produit existe dans le boutique</string>
    <string name="contacter_vendeur">Contacter Vendeur</string>
    <string name="produit_supp">le produit a été supprimé</string>
    <string name="consulter_photo">consulter photo</string>
    <string name="suivi">Suivi</string>
    <string name="no_suvi">Non suivi</string>

</resources>
